--- a/homecss.css
+++ b/homecss.css
@@ -15,5 +15,30 @@
 
 #modal1 { width:50% !important ; max-height: 90% !important ; overflow-y: hidden !important ;}
 
+#fixedHeader{
+	top:0px;
+	left:0px;
+	width:100%;
+	 /* fallback */
+  background-color: #1a82f7;
+  background-image: url(images/linear_bg_1.png);
+  background-repeat: repeat-y;
+
+  /* Safari 4-5, Chrome 1-9 */
+  background: -webkit-gradient(linear, left top, right top, from(#1a82f7), to(#2F2727));
+
+  /* Safari 5.1, Chrome 10+ */
+  background: -webkit-linear-gradient(left, #2F2727, #1a82f7);
+
+  /* Firefox 3.6+ */
+  background: -moz-linear-gradient(left, #2F2727, #1a82f7);
+
+  /* IE 10 */
+  background: -ms-linear-gradient(left, #2F2727, #1a82f7);
+
+  /* Opera 11.10+ */
+  background: -o-linear-gradient(left, #2F2727, #1a82f7);
+}
+
 
 
