--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,16 +1,33 @@
-.filters{
- background-color: #f4f4f4;
- float: left;
- overflow: hidden;
- padding: 0px 10px 20px 10px;
- border: 1px solid #e6e6e6;
- width: 200px;
- margin-top: 30px;
- margin-right: 5px;
+#mainContainer{
+    border-style: solid;
+    border-width: 1px;
+	border-color: #cccccc;
+	margin-top: 80px;
 }
-#leftContainer{
-  background-color: #f4f4f4;
+.sort-icon {
+    font-size: 9px;
+    margin-left: 5px;
 }
-#rightContainer{
-  background-color: #CCCCCC;
+
+th {
+	cursor:pointer;
+}
+
+.navbar-login
+{
+    width: 305px;
+    padding: 10px;
+    padding-bottom: 0px;
+}
+
+.navbar-login-session
+{
+    padding: 10px;
+    padding-bottom: 0px;
+    padding-top: 0px;
+}
+
+.icon-size
+{
+    font-size: 87px;
 }
